resources/tests/invalid_syntax/parens.ct
//Error: Unclosed parenthesis delimiter!
fn hello()->i32: (10 + 10 + (10 + (10));